# evr

./: .gitignore  ADDITIONAL_IMPROVEMENTS.md  APPROACH_ANALYSIS.md  CRITICAL_BUG_FIX.md  Company Economics and Stock Market.txt  EXAMPLES.md  GITHUB_ACTIONS_SETUP.md  LICENSE  MARKET_RELATIVE_RETURNS.md  PEAK_DETECTION_IMPLEMENTATION.md  README.md  README_SCANNER.md  SOTA_IMPROVEMENTS.md  TRAINING_ANALYSIS_2026-02-03.md  URGENT_ACTION_PLAN.md  USAGE.md  WORKFLOW_PARAMETER_ANALYSIS.md  cli.py  cli_official_scanner.py  demo_parameter_system.py  historical_parameter_trainer.py  official_scanner.py  parameter_integration.py  portfolio_state.json  pyproject.toml  requirements-actions.txt  requirements.txt  requirements_timing.txt  requirements_training.txt  run_parameter_training.py  test_parameter_system.py
.github/workflows/: daily-scanner.yml  daily-scanner.yml.disabled  daily-stock-screener.yml  manual-scanner.yml  market_timing.yml  (+5 more)
cache/: delisted_tickers.json  official_tickers.json
data_cache/: fx_usdcad.json
docs/: ALL_FIXES_COMPLETE.md  AUTO_POSITION_MONITORING.md  AUTO_RETRAINING_FEATURE.md  CAPITAL_AND_POSITION_SIZE_FIX.md  DAILY_RUN_FLOW_CHART.md  EMAIL_SETUP.md  FIXES_SUMMARY_NOV4.md  GET_STARTED.md  GITHUB_WORKFLOWS.md  PARAMETER_TRAINING_README.md  PORTFOLIO_PIPELINE_AUDIT.md  POSITION_MANAGEMENT_ENHANCEMENTS.md  QUICKSTART_PARAMETER_TRAINING.md  README_PARAMETERS.md  RESEARCH_GROUNDED_SIMPLIFICATION.md  SETUP_NAME_FIX.md
evr/: __init__.py  types.py
examples/: minimal_backtest.py  minimal_scan.py
market_timing/: data_engine.py  model.py  scanner.py  service.py
stock_screener/: __init__.py  cli.py  config.py  utils.py
tests/: test_action_rewards.py  test_cost_model.py  test_daily_dynamic_sizing.py  test_dynamic_sizing_model_ic.py  test_evaluation_metrics.py  test_feature_parity.py  test_features.py  test_metadata_consistency.py  test_model.py  test_model_promotion_gates.py  test_pipeline_smoke.py  test_portfolio_manager.py  test_portfolio_state.py  test_quantile_lcb.py  test_rebalance_hysteresis_dynamic.py  test_regime.py  test_regime_gating.py  test_reporting_render.py  test_reward_policy.py  test_reward_tracker.py  test_risk_parity.py  test_scoring.py  test_sota_features.py  test_topn_per_day_metrics.py  test_transform_nan_warnings.py  test_transform_regime_columns.py  test_workflow_lint.py
trained_parameters/: scanner_parameters.json  trade_results.csv  trained_statistics.json
(+72 files in other folders)
