[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evr"
version = "1.0.0"
description = "Empirical Volatility Regime - A quantitative trading framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EVR Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "duckdb>=0.8.0",
    "yfinance>=0.2.0",
    "pandas-datareader>=0.10.0",
    "fredapi>=0.5.0",
    "requests>=2.28.0",
    "pandas-ta>=0.3.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
evr = "evr.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["evr*"]

[tool.setuptools.package-data]
evr = ["py.typed", "config/*.yaml", "reporting/templates/*"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
